@@ -4,6 +4,7 @@
 
 - updated `F.runscript()` by adding `require` argument
 - improved internal proxy functionality
+- added `U.getExtensionFromContentType(value)`
 
 ========================
 0.0.62
